src/test/out/c34-idflink.err
Processing workspace TestWS
Processing directory test/c
Entering directory test/c
Processing project Prj1
Processing file c34-idflink.c
/cscout/src/test/c/c34-idflink.c:18: error: conflicting declarations for identifier f
The text leading to this error is: [static void f(void) {]
Done processing file c34-idflink.c
Done processing project Prj1
Processing project Prj2
Processing file c34-idflink.c
/cscout/src/test/c/c34-idflink.c:18: error: conflicting declarations for identifier f
The text leading to this error is: [static void f(void) {]
Done processing file c34-idflink.c
Processing file prj2.c
Done processing file prj2.c
Done processing project Prj2
Exiting directory test/c
Done processing directory test/c
Done processing workspace TestWS
Post-processing /cscout/example/.cscout/host-defs.h
Post-processing /cscout/example/.cscout/host-incs.h
Post-processing /cscout/src/makecs.cs
Post-processing /cscout/src/test/c/c34-idflink.c
Post-processing /cscout/src/test/c/prj2.c
Processing identifiers
5%10%15%20%25%30%35%40%45%50%55%60%65%70%75%80%85%90%95%100%
